--- a/style.css
+++ b/style.css
@@ -95,3 +95,222 @@
 
 
 /*  ---------------- navbar completed ---------------------- */
+
+
+
+
+.container{
+    display:flex;
+    padding:20px 6%;
+    flex-wrap:wrap;
+    justify-content: space-between;
+}
+
+
+/* ---------------------left sidebar--------------------------- */
+
+
+.left-sidebar{
+    flex-basis:25%;
+    align-self: flex-start;
+}
+.sidebar-profile-box{
+    background:#fff;
+}
+.sidebar-profile-info{
+    padding:0 25px;
+}
+.sidebar-profile-info img{
+    width:90px;
+    border-radius: 50%;
+    background: #fff;
+    padding:4px;
+    margin-top: -45px;
+}
+.sidebar-profile-info h1{
+    font-size: 20px;
+    font-weight: 600;
+    color:#222;
+}
+.sidebar-profile-info h3{
+    font-size: 14px;
+    font-weight: 500;
+    color: #777;
+}
+.sidebar-profile-info ul{
+    list-style:none ;
+    margin: 20px 0;
+}
+.sidebar-profile-info ul li{
+    width:100%;
+    margin:5px 0;
+    font-size: 13px;
+}
+.sidebar-profile-info ul li span{
+    float:right ;
+    color:#045be6;
+}
+.sidebar-profile-link{
+ display: flex;
+ align-items: center;
+ border-top: 1px solid #ccc;
+}
+.sidebar-profile-link a{
+    display: flex;
+    align-items: center;
+    border-left: 1px solid #ccc;
+    flex-basis: 50%;
+    justify-content: center;
+    padding:15px 0;
+    font-size: 13px;
+
+   }
+.sidebar-profile-link a :first-child{
+    border-left: 0;
+}
+.sidebar-profile-link a img{
+    width:20px;
+    margin-right:10px ;
+}
+
+
+.sidebar-activity{
+    background: #fff;
+    padding:5px 25px;
+    margin:12px 0;
+
+}
+.sidebar-activity h3{
+    color:#777;
+    font-size: 14px;
+    font-weight: 500;
+    margin: 20px 0 10px;
+}
+.sidebar-activity a{
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    font-weight: 500;
+    color:#888;
+    margin:3px 0;
+}
+.sidebar-activity a img{
+     width:20px;
+     margin-right:10px ;
+}
+.discover-more-link{
+    border-top: 1px solid #ccc;
+    text-align: center;
+    margin-top:20px;
+    margin-left: -25px;
+    margin-right: -25px;
+}.discover-more-link a{
+    color:#045be6;
+    display: inline-block;
+    margin:10px 0;
+}
+
+
+/* --------------------right sidebar---------------------------- */
+
+.right-sidebar{
+    flex-basis:25%;
+    align-self: flex-start;
+}
+.sidebar-news{
+    background:#fff;
+    padding:10px 25px;
+}
+.info-icon{
+    width:15px;
+    float: right;
+    margin-top: 15px;
+}
+.sidebar-news h3{
+    font-size: 18px;
+    font-weight: 600;
+    color:#333;
+    margin: 10px 0 30px;
+}
+.sidebar-news a{
+    display: block;
+     font-size: 12px;
+     font-weight: 600;
+     margin-top: 10px;
+     margin-bottom: -5px;
+}
+.sidebar-news span{
+    font-size: 12px;  
+}
+
+.sidebar-news .read-more-link{
+    color:#045be6;
+    font-weight: 500;
+    margin:20px 0 10px ;
+}
+.sidebar-ad{
+    background: #fff;
+    padding: 15px 25px;
+    text-align: center;
+    margin: 12px 0;
+    font-size: 12px;
+}
+.sidebar-ad img{
+    width: 60px;
+    border-radius: 50%;
+    margin: 4px;
+}
+.sidebar-ad small{
+    float: right;
+    font-weight: 500;
+}
+.sidebar-ad p{
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+.sidebar-ad b{
+    display: block;
+    font-weight: 500;
+    margin-top: 10px;
+}
+.ad-link{
+    display: inline-block;
+    border:1px solid #045be6;
+    border-radius: 30px;
+    padding: 5px 15px;
+    color:#045be6;
+    font-weight: 500;
+    margin-top: 20px auto 10px;
+
+}
+.sidebar-useful-links{
+    padding:15px 25px;
+    text-align: center;
+}
+.sidebar-useful-links a{
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+}
+.copyright-msg{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    margin-top: 10px;
+    font-weight: 500;
+
+}
+.copyright-msg img{
+    width:18px;
+    margin-right: 4px;
+}
+
+/* -------------------------------main content ---------------------------- */
+
+
+.main-content{
+    flex-basis:47%;
+}
+
+
