--- a/style.css
+++ b/style.css
@@ -113,6 +113,8 @@
 .left-sidebar{
     flex-basis:25%;
     align-self: flex-start;
+    position: sticky;
+    top:73px;
 }
 .sidebar-profile-box{
     background:#fff;
@@ -216,6 +218,8 @@
 .right-sidebar{
     flex-basis:25%;
     align-self: flex-start;
+    position: sticky;
+    top:73px;
 }
 .sidebar-news{
     background:#fff;
@@ -306,11 +310,227 @@
     margin-right: 4px;
 }
 
+
+
+
+.courses{
+    margin: 12px 0;
+}
+
+
+
+
+
+
 /* -------------------------------main content ---------------------------- */
 
 
 .main-content{
     flex-basis:47%;
 }
+.create-post{
+    background:#fff;
+}
+.create-post-input{
+    padding:20px 25px 10px;
+    display:flex;
+    align-items: flex-start;
+}
+.create-post-input img{
+    width:35px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+.create-post-input textarea{
+    width:100%;
+    border:0;
+    outline: 0;
+    resize: none;
+    background: transparent;
+    margin-top: 8px;
+}
+::placeholder{
+    font-weight: 500;
+
+}
+.create-post-links{
+    display: flex;
+    align-items: flex-start;
+}
+.create-post-links li{
+    list-style: none;
+    border-top: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    border-radius: 1px solid #ccc;
+    flex-basis: 25%;
+    height: 40px;
+    font-size: 13px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.create-post-links li{
+    width:15px;
+    margin-right: 5px;
+}
+.create-post-links li:last-child{
+    background: #045be6;
+    color:#fff;
+    border-top: 0;
+    border-right: 0;
+}
+.sort-by{
+    display: flex;
+    align-items: center;
+    margin:10px 0;
+}
+.sort-by hr{
+    flex: 1;
+    border: 0;
+    height: 1px;
+    background:#ccc ;
+
+}
+.sort-by p{
+    font-size:13px;
+    padding-left:5px;
+}
+.sort-by p span{
+    font-weight:600;
+    cursor:pointer;
+}
+.sort-by p span img{
+    width:12px;
+    margin-left:3px
+}
+.post{
+    background: #fff;
+    padding:20px 25px 5px;
+    margin:5px 0 15px;
+}
+.post-author{
+    display: flex;
+    align-items: flex-start;
+    margin-bottom:20px;
+
+}
+.post-author img{
+    width: 35px;
+    border-radius: 50px;
+    margin-right: 10px;
+    margin-top:5px;
+}
+.post-author h1{
+    font-size:18px;
+    font-weight:600;
+    color:#333;
+}
+.post-author small{
+    display: block;
+    margin-bottom: -2px;
+}
+.post p{
+    font-size:14px;
+    margin-bottom: 15px;
+}
+.post-stats{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 12px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 6px;
+}
+.post-stats div{
+    display: flex;
+    align-items: center;
+}
+.post-stats img{
+    width:15px ;
+    margin-right: -5px;
+}
+.liked-users{
+    margin-left: 10px;
+}
+.post-activity{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0;
+    font-size:14px;
+    font-weight: 500;
+}
+.post-activity div{
+display: flex;
+align-items: center;
+}
+.post-activity-user-icon{
+    width:22px ;
+    border-radius: 50%;
+}
+.post-activity-arrow-icon{
+    width:12px ;
+    margin-left: 5px;
+}
+.post-activity-link img{
+    width: 18px;
+    margin-right: 8px;
+}
 
 
+
+
+
+
+/* media queries added for mobile size screen */
+@media only screen and (max-width:600px){
+    .search-box{
+        background: transparent;
+        width:auto;
+        padding: 0;
+    }
+    .search-box input{
+        width: 0;
+        padding: 0;
+
+    }
+    .navbar-center ul li a span{
+        display:none;
+
+    }
+    .navbar-center ul li a {
+        padding-right:0;
+        margin:5px;
+    }
+    .nav-profile-img{
+        width:30px;
+
+    }
+    .container{
+        padding:15px 3%;
+    }
+
+
+    .left-sidebar,.right-sidebar{
+        flex-basis: 100%;
+        position: relative;
+        top: unset;
+    }
+
+    .main-content{
+        flex-basis: 100%;
+    }
+    .post-stats div{
+        margin:2px 0;
+
+    }
+    .post-activity-link span{
+        display: none;
+    }
+    .post-activity-link img{
+
+        margin-right:0;
+    }
+}
